--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="apple-touch-icon" href="public/favicon-transparent.png" />
     <!-- خط Tajawal -->
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#E9AB1D" />
+<link rel="apple-touch-icon" href="/favicon-transparent.png" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+
   </head>
   <body>
     <div id="root"></div>
