--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>We Pay — نظام تتبع الشحنات</title>
-    <link rel="icon" type="image/png" href="public/favicon-transparent.png" />
-    <link rel="apple-touch-icon" href="public/favicon-transparent.png" />
-    <!-- خط Tajawal -->
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-    <link rel="manifest" href="/manifest.json" />
-<meta name="theme-color" content="#E9AB1D" />
-<link rel="apple-touch-icon" href="/favicon-transparent.png" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- 🟡 عنوان الموقع في نتائج البحث -->
+  <title>Shein Libya | نوفر لك خدمة الشراء من شي إن في ليبيا</title>
+
+  <!-- 🟡 الوصف الرئيسي للموقع (Description) -->
+  <meta name="description" content="Shein Libya | نوفر لك خدمة شراء وتتبع شحنات شي إن ونوفر أيضًا حاسبة أسعار لحساب منتجاتك">
 
 
-  </head>
+  <!-- 🟡 الكلمات المفتاحية (اختيارية ولكن مفيدة) -->
+  <meta name="keywords" 
+        content="shein, شي ان ليبيا, شراء من شي ان, شي ان ليبيا, Shein Libya">
+
+  <!-- 🟡 اللغة -->
+  <meta name="language" content="ar" />
+
+  <!-- 🟡 OG Tags (تحسين المشاركة على فيسبوك وإنستغرام) -->
+  <meta property="og:title" content="Shein Libya | نوفر لك خدمة الشراء من شي إن في ليبيا" />
+  <meta property="og:description" content="Shein Libya | نوفر لك خدمة شراء وتتبع شحنات شي إن ونوفر أيضًا حاسبة أسعار لحساب منتجاتك" />
+  <meta property="og:image" content="https://www.sheinlibya.com/favicon.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.sheinlibya.com" />
+
+  
+
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#E9AB1D" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
