--- a/index.html
+++ b/index.html
@@ -41,6 +41,69 @@
   <link rel="preload" href="/src/main.jsx" as="script" />
 
   <!-- ============================== -->
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+
+    {
+      "@type": "Organization",
+      "name": "Shein Libya",
+      "url": "https://www.sheinlibya.com",
+      "logo": "https://www.sheinlibya.com/favicon.png",
+      "description": "We Pay، وكيل Shein الرسمي في ليبيا، نوفر لك تجربة شراء وشحن مريحة وآمنة, تابع شحنتك من لحظة الطلب حتى وصولها إلى باب منزلك عبر نظام تتبع دقيق وسهل الاستخدام.",
+      "contactPoint": [
+        {
+          "@type": "ContactPoint",
+          "telephone": "+218915771795",
+          "contactType": "customer support",
+          "areaServed": "LY",
+          "availableLanguage": ["ar"]
+        }
+      ],
+      "sameAs": [
+        "https://www.facebook.com/wesheinlibya"
+      ]
+    },
+
+    {
+      "@type": "WebSite",
+      "url": "https://www.sheinlibya.com",
+      "name": "Shein Libya",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://www.sheinlibya.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    },
+
+    {
+      "@type": "LocalBusiness",
+      "name": "Shein Libya",
+      "image": "https://www.sheinlibya.com/favicon.png",
+      "url": "https://www.sheinlibya.com",
+      "telephone": "+218915771795",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "LY"
+      },
+      "description": "خدمة شراء وتتبع شحنات شي إن في ليبيا مع We Pay."
+    },
+
+    {
+      "@type": "Person",
+      "name": "Shein Libya",
+      "url": "https://www.sheinlibya.com",
+      "sameAs": [
+        "https://www.facebook.com/wesheinlibya"
+      ]
+    }
+
+  ]
+}
+</script>
+
 
   
 
